# FOTD-Bot

./: .gitignore  Cargo.toml  Logo.ai  README.md
data/: config.cfg
data/config/: config.cfg  sendTo.txt
data/facts/: facts.txt
data/template/: fact.html  index.html  subscribe.html  unsubscribe.html
data/web/: 404.html  index.css  index.css.map  index.html  index.scss
data/web/common/: confirm.js
data/web/history/: index.html  index.js
data/web/stats/: index.html
data/web/subscribe/: index.css  index.html  index.js  index.scss
data/web/subscribe/confirm/: index.html  index.js
data/web/subscribe/done/: allDone.html  index.html
data/web/unsubscribe/: index.css  index.css.map  index.html  index.scss
data/web/unsubscribe/confirm/: index.html
data/web/unsubscribe/done/: allDone.html  index.html
data/web/unsubscribe/real/: index.html  index.js
scripts/: fact_history.rs  info.rs  migrate.rs
src/: app.rs  color.rs  config.rs  database.rs  email.rs  loop.rs  main.rs  webhook.rs
src/common/: arg_parse.rs  color.rs  common.rs  mod.rs
src/misc/: email.rs  mod.rs  send_time.rs
src/sql/: create_facts.sql  create_users.sql
src/web/: logger.rs  mod.rs  serve_static.rs
src/web/routes/: fact.rs  mod.rs  serve_static.rs  sub.rs  unsub.rs
src/web/routes/api/: fact.rs  fact_at.rs  fact_history.rs  fact_random.rs  fact_range.rs  mod.rs
web_interface/: Cargo.toml  index.html
web_interface/src/: main.rs
web_interface/static/: index.html
web_interface/static/unsubscribe/: index.css  index.css.map  index.html  index.js  index.scss
(+7 files in other folders)
