[package]
authors = ["Connor Slade <connor@connorcode.com>"]
edition = "2018"
name = "fotd_email_bot"
version = "2.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afire = "0.2.0"
chrono = "0.4"
lettre = "0.10.0-rc.3"
rand = "0.8.4"
simple_config_parser = "1.0.0"
ureq = "2.2.0"
